// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox/> component when the checkbox is checked should render correctly 1`] = `
<input
  aria-label="mark this task as incomplete"
  checked={true}
  className="checkbox"
  onChange={[Function]}
  type="checkbox"
/>
`;

exports[`<Checkbox/> component when the checkbox is not checked should render correctly 1`] = `
<input
  aria-label="mark this task as complete"
  checked={false}
  className="checkbox"
  onChange={[Function]}
  type="checkbox"
/>
`;
